--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,8 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
-    "needle": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
