--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,10 +2,11 @@ FROM node:18
 
 WORKDIR /app/client
 
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install
+COPY package.json package-lock.json ./
+RUN npm install --silent
 
 COPY . ./
+
+EXPOSE 5173
 
 CMD ["npm", "run", "dev"]
